--- a/core/templates/core/homepage.html
+++ b/core/templates/core/homepage.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Play Chain Reaction</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+{% load static %}
+
+{% block title  %}Play Chain Reaction{% endblock %}
+
+{% block body %}
     <h1>Work in progress</h1>
-</body>
-</html>
+
+{% endblock %}
