--- a/templates/game-info.html
+++ b/templates/game-info.html
@@ -1,20 +1,24 @@
-<div class="pad-30">
+<div class="pad-30 flexbox-column">
+    <h1>Chain Reaction</h1>
+</div>
+
+<div class="pad-30 flexbox-column">
     <label for="n-players">How many people are playing?</label>
     <input type="number" name="n-players" id="n-players" value="2">
 </div>
 
-<div class="pad-30">
+<div class="pad-30 flexbox-column">
     <label for="width">Number of cells per row</label>
     <input type="number" name="width" id="width" value="6">
 </div>
 
-<div class="pad-30">
+<div class="pad-30 flexbox-column">
     <label for="height">Number of rows</label>
     <input type="number" name="height" id="height" value="9">
 </div>
 
-<div class="pad-30">
+<div class="pad-30 flexbox-column">
     <button id="start-game">
-        <span>Start game</span>
+        <span style="font-size: 1.5rem;">Start Game</span>
     </button>
 </div>
