--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,10 @@
     <meta name="author" content="Hrushikesh Vaidya | @hrushikeshrv">
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon-64.png' %}">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Tilt+Warp&display=swap" rel="stylesheet">
+
     {% block meta %}{% endblock %}
     {% block stylesheet %}{% endblock %}
 
