--- a/core/templates/core/play_local.html
+++ b/core/templates/core/play_local.html
@@ -5,6 +5,7 @@
 
 {% block libraries %}
     <script src="{% static 'js/core/player.js' %}"></script>
+    <script src={% static 'js/utils.js' %}></script>
     <script src="{% static 'js/core/particle.js' %}"></script>
     <script src="{% static 'js/core/chainreaction.js' %}"></script>
 {% endblock %}
@@ -14,8 +15,12 @@
         <div class="column-fourth full-height mobile-hide flexbox-column" id="game-settings-window">
             {% include 'game-info.html' %}
         </div>
-        <div class="column-half full-height" id="game-window"></div>
-        <div class="column-fourth full-height mobile-hide" id="game-info-window"></div>
+        <div class="column-half full-height" id="game-window">
+            <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-family: var(--heading-bold-font); font-size: 2rem;">
+                Click Start Game to start the game
+            </div>
+        </div>
+        <div class="column-fourth full-height mobile-hide flexbox-column" id="game-info-window"></div>
     </div>
 {% endblock %}
 
