--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -492,3 +492,17 @@ input, button {
 #game-window {
     border: 2px solid red;
 }
+
+.chainrxn-particle-empty,
+.chainrxn-particle-1,
+.chainrxn-particle-2,
+.chainrxn-particle-3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: var(--monospace-font);
+    color: black;
+    text-shadow: 0 0 2px white;
+    width: 100%;
+    height: 100%;
+}
