Added game over detection

--- a/core/templates/core/play_local.html
+++ b/core/templates/core/play_local.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block body %}
+    {% include 'game-over.html' %}
     <div class="flexbox-row">
         <div class="column-fourth full-height mobile-hide flexbox-column" id="game-settings-window">
             {% include 'game-info.html' %}
