--- a/core/templates/core/play_local.html
+++ b/core/templates/core/play_local.html
@@ -17,7 +17,7 @@
             {% include 'game-info.html' %}
         </div>
         <div class="column-half full-height" id="game-window">
-            <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-family: var(--heading-bold-font); font-size: 2rem;">
+            <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-family: var(--heading-bold-font); font-size: 2rem; text-align: center;">
                 Click Start Game to start the game
             </div>
         </div>
