--- a/core/templates/core/play_local.html
+++ b/core/templates/core/play_local.html
@@ -21,10 +21,8 @@
                 Click Start Game to start the game
             </div>
         </div>
-        <div class="column-fourth full-height flexbox-column" id="game-info-window">
-            <div class="pad-30">
-                <h1>Players</h1>
-            </div>
+        <div class="column-fourth full-height" id="game-info-window">
+            <h1 class="pad-30">Players</h1>
         </div>
     </div>
 {% endblock %}
