--- a/core/templates/core/play_live.html
+++ b/core/templates/core/play_live.html
@@ -14,9 +14,8 @@
     {% include 'game-over.html' %}
     <div class="flexbox-row">
         <div class="column-fourth full-height flexbox-column" id="game-settings-window">
-            <div id="game-info-container">
-                {% include 'game-info.html' %}
-            </div>
+            <div id="game-info-container"></div>
+            {% include 'game-info.html' %}
         </div>
         <div class="column-half full-height" id="game-window">
             <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-family: var(--heading-bold-font); font-size: 2rem; text-align: center;">
